# Receitas_do_Chef

./: .gitignore  pyproject.toml
apps/cookbook/: admin.py  models.py  urls.py
apps/cookbook/migrations/: 0001_initial.py  0002_receita_pessoa.py  0003_receita_publicada.py  0005_alter_receita_pessoa.py
apps/cookbook/views/: __init__.py  cookbook.py
apps/usuarios/: views.py
cookbook/: models.py  urls.py  views.py
cookbook/migrations/: 0002_receita_pessoa.py  0004_receita_foto_receita.py
cookbook/templates/: index.html  receita.html
cookbook/templates/partials/: _footer.html  _header.html
pessoas/: admin.py  models.py
pessoas/migrations/: 0001_initial.py
receitas/: settings.py  urls.py
static/: site.css
templates/: index.html  receita.html
templates/cookbook/: buscar.html  cria_receita.html  edita_receita.html  index.html
templates/partials/: _alertas.html  _header.html  base.html
templates/usuarios/: cadastro.html  dashboard.html  login.html
usuarios/: views.py
