[tool.poetry]
name = "app"
version = "0.1.0"
description = ""
authors = ["rafaelmarquespn <rafaelmarquespn>"]
readme = "README.md"
packages = [{include = "app"}]

[tool.poetry.dependencies]
python = "^3.10"
django = "^4.1.7"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
